apps/likes_books/likes_books.txt
   - Remove field users from book
    - Delete model Book
    - Delete model User
(djangoEnv) Jasons-MacBook-Pro:blog jasonmeyer$ python manage.py makemigrations
No changes detected
(djangoEnv) Jasons-MacBook-Pro:blog jasonmeyer$ python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, book_authors, contenttypes, dojo_ninjas, likes_books, sessions, user_login
Running migrations:
  Rendering model states... DONE
  Applying likes_books.0002_auto_20180221_1402... OK
(djangoEnv) Jasons-MacBook-Pro:blog jasonmeyer$ python manage.py makemigrations
Migrations for 'likes_books':
  apps/likes_books/migrations/0003_auto_20180221_1408.py:
    - Create model Book
    - Create model User
    - Add field liked to book
    - Add field uploaded_by to book
(djangoEnv) Jasons-MacBook-Pro:blog jasonmeyer$ python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, book_authors, contenttypes, dojo_ninjas, likes_books, sessions, user_login
Running migrations:
  Rendering model states... DONE
  Applying likes_books.0003_auto_20180221_1408... OK
(djangoEnv) Jasons-MacBook-Pro:blog jasonmeyer$ python manage.py shell
Python 2.7.10 (default, Oct 23 2015, 19:19:21) 
[GCC 4.2.1 Compatible Apple LLVM 7.0.0 (clang-700.0.59.5)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from apps.users_books.models import *
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: No module named users_books.models
>>> from apps.users_likes.models import *
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: No module named users_likes.models
>>> from apps.likes_books.models import *
>>> User.objects.create(first_name = "Roger", last_name = "Kloutz", email = greenman@gmail.com)
  File "<console>", line 1
    User.objects.create(first_name = "Roger", last_name = "Kloutz", email = greenman@gmail.com)
                                                                                    ^
SyntaxError: invalid syntax
>>> User.objects.create(first_name = "Roger", last_name = "Kloutz", email = "greenman@gmail.com")
<User: User object>
>>> User.objects.create(first_name = "Doug", last_name = "Funny", email = "thebeats@gmail.com")
<User: User object>
>>> User.objects.create(first_name = "Patty", last_name = "Mayo", email = "Eww@gmail.com")
<User: User object>
>>> this_author = Author.objects.get(id=1)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'Author' is not defined
>>> this_user = User.objects.get(id=1)
>>> my_book= Book.objects.create(name="LOTR", uploaded_by = this_user)
>>> this_user = User.objects.get(id=1)
>>> my_book= Book.objects.create(name="Harry Potter", uploaded_by = this_user)
>>> this_user = User.objects.get(id=2)
>>> my_book= Book.objects.create(name="A Wrinkle in Time", uploaded_by = this_user)
>>> this_user = User.objects.get(id=2)                                          >>> my_book= Book.objects.create(name="Borat", uploaded_by = this_user) 
>>> this_user = User.objects.get(id=3)
>>> my_book= Book.objects.create(name="A Dog's Life", uploaded_by = this_user)
>>> this_user = User.objects.get(id=3)
>>> my_book= Book.objects.create(name="Rat Race", uploaded_by = this_user)
>>> this_user = User.objects.get(id=1)
>>> this_book = Book.objects.first()
>>> this_book.liked.add(this.user)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'this' is not defined
>>> this_book.liked.add(this_user)
>>> this_book = Book.objects.last()
>>> this_user = User.objects.get(id=1)
>>> this_book.liked.add(this_user)
>>> this_user = User.objects.get(id=2)
>>> this_book = Book.objects.first()
>>> this_book.liked.add(this_user)
>>> this_user = User.objects.get(id=2)
>>> this_book = Book.objects.get(id=3)
>>> this_book.liked.add(this_user)
>>> this_user = User.objects.get(id=3)
>>> this_book = Book.objects.all
>>> this_book.liked.add(this_user)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'function' object has no attribute 'liked'
>>> this_user = User.objects.get(id=3)
>>> this_book = Book.objects.get(id=1)
>>> this_book.liked.add(this_user)
>>> this_user = User.objects.get(id=3)
>>> this_book = Book.objects.get(id=2)
>>> this_book.liked.add(this_user)
>>> this_book = Book.objects.get(id=3)
>>> this_book.liked.add(this_user)
>>> this_book = Book.objects.get(id=4)
>>> this_book.liked.add(this_user)
>>> this_book = Book.objects.get(id=5)
>>> this_book.liked.add(this_user)
>>> this_book = Book.objects.get(id=1)
>>> this_user = User.objects.all()
>>> this_book.liked.get(this_user)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/manager.py", line 85, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/query.py", line 376, in get
    clone = self.filter(*args, **kwargs)
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/query.py", line 794, in filter
    return self._filter_or_exclude(False, *args, **kwargs)
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/query.py", line 812, in _filter_or_exclude
    clone.query.add_q(Q(*args, **kwargs))
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/sql/query.py", line 1227, in add_q
    clause, _ = self._add_q(q_object, self.used_aliases)
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/sql/query.py", line 1253, in _add_q
    allow_joins=allow_joins, split_subq=split_subq,
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/sql/query.py", line 1130, in build_filter
    arg, value = filter_expr
ValueError: too many values to unpack
>>> this_book = Book.objects.get(id=1)
>>> this_book.users.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Book' object has no attribute 'users'
>>> this_book.liked.all()
<QuerySet [<User: User object>, <User: User object>, <User: User object>]>
>>> b = this_book.liked.all()
>>> b[0].name
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'User' object has no attribute 'name'
>>> b[0].first_name
u'Roger'
>>> b[1].first_name
u'Doug'
>>> b[2].first_name
u'Patty'
>>> this_book = Book.objects.get(id=1)
>>> this_book.uploader
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Book' object has no attribute 'uploader'
>>> this_book.uploader()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Book' object has no attribute 'uploader'
>>> this_book.uploaded_by
<User: User object>
>>> a = this_book.uploaded_by
>>> a[0].name
Traceback (most recent call last):
  File "<console>", line 1, in <module>
TypeError: 'User' object does not support indexing
>>> a[0].first_name
Traceback (most recent call last):
  File "<console>", line 1, in <module>
TypeError: 'User' object does not support indexing
>>> a.first_name
u'Roger'
>>> this_book = Book.objects.get(id=2)
>>> b = this_book.liked.all()
>>> b[0].first_name
u'Patty'
>>> b[1].first_name
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "/Users/jasonmeyer/Desktop/pythonstack/myEnvironments/djangoEnv/lib/python2.7/site-packages/django/db/models/query.py", line 295, in __getitem__
    return list(qs)[0]
IndexError: list index out of range
>>> this_book = Book.objects.get(id=2)
>>> a = this_book.uploaded_by
>>> a.first_name
u'Roger'
>>> exit()
(djangoEnv) Jasons-MacBook-Pro:blog jasonmeyer$ 
